--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente de desarrollo
-configuracion.autor.nombre=Andres
-configuracion.autor.email=crivera@gmail.com
+configuracion.texto=Configurando ambiente de desarrollo ..... 
+configuracion.autor.nombre=Jhon DOe
+configuracion.autor.email=jhon.doe@gmail.com
