--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -3,5 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
+server.port=9000
