--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -5,4 +5,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
-server.port=9000
+server.port=${PORT:0}
